sravani changed config

--- a/src/main/java/com/cdp/config/config.properties
+++ b/src/main/java/com/cdp/config/config.properties
@@ -7,6 +7,7 @@ password_Textbox=//*[@id='app_mainView_loginView_passwordBox']
 signin_Button=//button[@class='enyo-tool-decorator loginview_input_button']
 forgot_Password_link=//a[@class='loginview_forgot']
 new_Customer_registartion_link=//a[@class='loginview_forgot new-customer-registration']
+sravani=//*fdsfsghdch
 
 #DASHBOARD SCREEN
 city_Name=//*[@id='app_mainView_appMainToolbar_deploymentCity']
