--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.cdp.group</groupId>
-  <artifactId>com.cdp.group.artifact</artifactId>
+  <groupId>main.java.com.cdp.group</groupId>
+  <artifactId>main.java.com.cdp.group.artifact</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>VerizonVNS</name>
   <description>VerizonVNS</description>
