--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,33 @@
     	<artifactId>extentreports</artifactId>
     	<version>2.41.2</version>
 	</dependency>
+	
+		<!-- https://mvnrepository.com/artifact/com.github.fge/json-schema-validator -->
+		<!-- <dependency>
+			<groupId>com.github.fge</groupId>
+			<artifactId>json-schema-validator</artifactId>
+			<version>2.2.6</version>
+		</dependency>
+		 -->
+		<dependency>
+	    <groupId>com.networknt</groupId>
+    		<artifactId>json-schema-validator</artifactId>
+    		<version>0.1.7</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.github.fge/jackson-coreutils -->
+		<dependency>
+			<groupId>com.github.fge</groupId>
+			<artifactId>jackson-coreutils</artifactId>
+			<version>1.8</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.github.fge/json-schema-core -->
+		<dependency>
+			<groupId>com.github.fge</groupId>
+			<artifactId>json-schema-core</artifactId>
+			<version>1.2.5</version>
+		</dependency>
   	
   </dependencies>
 
