API testing POST updated scripts

--- a/src/main/java/com/cdp/config/config.properties
+++ b/src/main/java/com/cdp/config/config.properties
@@ -5,6 +5,13 @@ CDP_URL=http://52.221.32.110/app/?login&client=poland.com
 EmailAccountsForReports=mohan.nimmala@quantela.com | sravani.kalisetty@quantela.com | manikanta.rudraraju@quantela.com | venkatakrishna.garikapati@quantela.com
 #| satish@quantela.com|swamy.vishnubhatla@quantela.com
 
+#API
+API_URL=http://52.221.32.110/dsapi/v1/accounts/cdptoken?domain=
+ServerIP=http://52.221.32.110
+poland.com={"username":"operator@poland.com","password":"admin"}
+paris.com={"username":"operator@paris.com","password":"Test@123"}
+usa.com={"username":"operator@usa.com","password":"Test@123"}
+
 #LOGIN SCREEN
 WelcomeMessage=//*[@id='app_mainView_loginView_loginMessage']
 CDPLogo=//*[@id='app_mainView_loginView_title']
