CDP Dashboard xpaths

--- a/src/main/java/com/cdp/config/config.properties
+++ b/src/main/java/com/cdp/config/config.properties
@@ -39,13 +39,39 @@ add_widget_Button=//*[@id='dLabel']
 delete_Custom_button=add-report-btn dropdown-toggle ng-scope
 save_Dashboard_button=//button[@class='btn pull-right btn-save']
 
-//gmail xpaths
+#CDP_DASHBOARD_XPATHS
+dashboard_Button=//div[@id='app_mainView_appMainToolbar_menuSectionContainer']/ul/li[1]
+mapview_Button=//div[@id='app_mainView_appMainToolbar_menuSectionContainer']/ul/li[2]
+alerts_Button=//div[@id='app_mainView_appMainToolbar_menuSectionContainer']/ul/li[3]
+policies_Button=//div[@id='app_mainView_appMainToolbar_menuSectionContainer']/ul/li[4]
+events_Button=//div[@id='app_mainView_appMainToolbar_menuSectionContainer']/ul/li[5]
+reports_Button=//div[@id='app_mainView_appMainToolbar_menuSectionContainer']/ul/li[6]
+SOP_Button=//div[@id='app_mainView_appMainToolbar_menuSectionContainer']/ul/li[7]
+waste_Module_Text=//div[@id='app_mainView_dashboard_panel_statusWaste_title']/span
+waste_Move_Button=//div[@id='app_mainView_dashboard_panel_statusWaste_moveWidgetBtn']
+waste_Remove_Button=//div[@id='app_mainView_dashboard_panel_statusWaste_removeWidgetBtn']
+waste_Status_Message=//div[@id='app_mainView_dashboard_panel_statusWaste_status']
+waste_Module_Button=//ul[@id='app_mainView_dashboard_panel']/li[1]
+dashboard_Label=//div[@id='app_mainView_dashboardMenu']/div/div[1]/div[1]
+default_Text=//div[@id='app_mainView_dashboardMenu']/div[1]/div[1]/div[2]
+dashboard_Menu_Button=//div[@id='app_mainView_dashboardMenu_control3']
+add_Widget_Label=//div[@id='app_mainView_dashboardMenu']/div/div[2]/div[1]
+add_Widget_Menu_Button=//div[@id='app_mainView_dashboardMenu_control5']
+add_Dashboard_Label=//div[@id='app_mainView_dashboardMenu']/div/div[3]/div[1]
+add_Dashboard_Menu_Button=//div[@id='app_mainView_dashboardMenu_control8']
+deafault_Dashboard_Widget=//div[@id='app_mainView_dashboardMenu_menuItem3']/div[1]
+default_Dashboard_Widget_tickmark=//div[@id='app_mainView_dashboardMenu_menuItem3']/i
+default_Dashboard_Widget_remove_icon=//div[@id='app_mainView_dashboardMenu_loadLayoutsPopup_client_strategy_client']/div[4]/div[2]
+add_Dashboard_Input=//div[@id='app_mainView_dashboardMenu_addLayoutPopup_client']/div[3]/div/input
+add_Dashboard_Cancel_Button=//div[@id='app_mainView_dashboardMenu_addLayoutPopup_client_strategy_client']/div/div/button[1]
+add_Dashboard_Ok_Button=//div[@id='app_mainView_dashboardMenu_addLayoutPopup_client_strategy_client']/div/div/button[2]
+delete_Dashboard_Header=//div[@id='app_mainView_dashboardMenu_deleteConfirmPopup']/div/span
+delete_Confirm_Content=//div[@id='app_mainView_dashboardMenu_deleteConfirmPopup']/div[2]
+delete_Confirm_No_Button=//div[@id='app_mainView_dashboardMenu_deleteConfirmPopup']/button[1]
+delete_Confirm_Yes_Button=//div[@id='app_mainView_dashboardMenu_deleteConfirmPopup']/button[2]
+confirmpopup_Close_Icon=//div[@id='app_mainView_dashboardMenu_deleteConfirmPopup']/div[1]/div
+parking_Move_Widget_Button=//div[@id='app_mainView_dashboard_panel_parkingStatus_title']/div[1]
+widget_Length=//div[@id='app_mainView_dashboardMenu_modulesPopup_client_strategy_client']/div
+widget_Text=/div[2]
 
-gmail_URL=https://mail.google.com/mail
-gmail_Username=//*[@id='identifierId']
-next_button=//*[@id='identifierNext']/div[2]
-gmail_password=//*[@id='password']/div[1]/div/div[1]/input
-password_Next=//*[@id='passwordNext']/div[2]
 
-
-save_Dashboard_button=//button[@class='btn pull-right btn-save']
