--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>main.java.com.cdp.group</groupId>
@@ -5,6 +6,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>VerizonVNS</name>
   <description>VerizonVNS</description>
+  
    
   <dependencies>
   
@@ -18,6 +20,7 @@
   	<dependency>
   		<groupId>org.testng</groupId>
   		<artifactId>testng</artifactId>
+  		
   		<version>6.10</version>
   		<!-- <scope>test</scope> -->
 	</dependency> 
@@ -28,6 +31,7 @@
   		
   		<version>3.12</version>
   		<!-- <scope>test</scope> -->
+  		
   	</dependency>
 
   	<dependency>
@@ -40,8 +44,10 @@
   	<dependency>
   		<groupId>org.apache.poi</groupId>
   		<artifactId>poi-ooxml-schemas</artifactId>
+  		
   		<version>3.12</version>
   		<!-- <scope>test</scope> -->
+  		
   	</dependency>
   	
   	<dependency>
@@ -56,6 +62,7 @@
   		<artifactId>javax.mail</artifactId>
   		<version>1.4.4</version>
   		<!-- <scope>test</scope> -->
+  		
   	</dependency>
   	
   	<dependency>
@@ -84,7 +91,14 @@
 	    <artifactId>freemarker</artifactId>
 	    <version>2.3.23</version>
 	</dependency>
-  	
+	
+	<!-- https://mvnrepository.com/artifact/com.github.detro.ghostdriver/phantomjsdriver--> 
+	<dependency>
+    	<groupId>com.github.detro.ghostdriver</groupId>
+    	<artifactId>phantomjsdriver</artifactId>
+    	<version>1.1.0</version>
+	</dependency>
+
   </dependencies>
 
 
@@ -130,5 +144,4 @@
 </build>
 
 
-   
 </project>
