Driver Script & Configs updated to store Centralized HTML Reports

--- a/src/main/java/com/cdp/config/config.properties
+++ b/src/main/java/com/cdp/config/config.properties
@@ -2,10 +2,14 @@
 CDP_URL=http://52.221.32.110/app/?login&client=poland.com
 #CDP_URL=https://cdp-jaipurlh.cisco.com/app/?login
 
-EmailAccountsForReports=mohan.nimmala@quantela.com | sravani.kalisetty@quantela.com | manikanta.rudraraju@quantela.com | venkatakrishna.garikapati@quantela.com
-#| satish@quantela.com|swamy.vishnubhatla@quantela.com
+EmailAccountsForReports=mohan.nimmala@quantela.com|sravani.kalisetty@quantela.com|manikanta.rudraraju@quantela.com|venkatakrishna.garikapati@quantela.com|satish@quantela.com|swamy.vishnubhatla@quantela.com
+
+#Centralized Reports Path
+#ReportsPath=D:/Tomcat/webapps/TestProject/
+ReportsPath=/var/www/cdpauto/
 
 #API
+#//52.221.32.110/dsapi/v1/accounts/cdptoken?domain=poland.com
 API_URL=http://52.221.32.110/dsapi/v1/accounts/cdptoken?domain=
 ServerIP=http://52.221.32.110
 poland.com={"username":"operator@poland.com","password":"admin"}
