Dashboard testcases added and Screen shots added in HTML reports

--- a/src/main/java/com/cdp/config/config.properties
+++ b/src/main/java/com/cdp/config/config.properties
@@ -73,5 +73,9 @@ confirmpopup_Close_Icon=//div[@id='app_mainView_dashboardMenu_deleteConfirmPopup
 parking_Move_Widget_Button=//div[@id='app_mainView_dashboard_panel_parkingStatus_title']/div[1]
 widget_Length=//div[@id='app_mainView_dashboardMenu_modulesPopup_client_strategy_client']/div
 widget_Text=/div[2]
+widget_Layer_1=//div[@id='app_mainView_dashboardMenu_modulesPopup_client_strategy_client']/div[5]/div[2]
+widget_Layer_2=//div[@id='app_mainView_dashboardMenu_modulesPopup_client_strategy_client']/div[9]/div[2]
+widget_Layer_3=//div[@id='app_mainView_dashboardMenu_modulesPopup_client_strategy_client']/div[13]/div[2]
+widget_Layer_4=//div[@id='app_mainView_dashboardMenu_modulesPopup_client_strategy_client']/div[19]/div[2]
 
 
